--- a/Lottery/LotteryHistory/pom.xml
+++ b/Lottery/LotteryHistory/pom.xml
@@ -27,6 +27,21 @@
             <artifactId>tess4j</artifactId>
             <version>4.5.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
