--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -74,6 +74,14 @@
             <version>3.18.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.session/spring-session-data-redis -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
