--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>spring-boot</module>
         <module>BQL-CRM</module>
         <module>Lottery</module>
+        <module>SocketTestServer</module>
     </modules>
 
     <build>
@@ -37,6 +38,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>2.3.3.RELEASE</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
