--- a/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/src/main/resources/application.yml
+++ b/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/src/main/resources/application.yml
@@ -13,3 +13,15 @@ logging:
     com:
       sephiroth:
         mapper: debug
+
+server:
+  port: 8081
+
+dubbo:
+  application:
+    name: user-server
+  registry:
+    address: zookeeper://185.250.221.166:2181?init.timeout=60000
+  protocol:
+    port: 3010
+    name: dubbo
