--- a/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/pom.xml
+++ b/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-boot-mirco-service-server</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.sephiroth</groupId>
+            <artifactId>spring-boot-mirco-service-service</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
