--- a/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/pom.xml
+++ b/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/pom.xml
@@ -13,7 +13,13 @@
     <dependencies>
         <dependency>
             <groupId>org.sephiroth</groupId>
-            <artifactId>spring-boot-mirco-service-service</artifactId>
+            <artifactId>spring-boot-mirco-service-entity</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sephiroth</groupId>
+            <artifactId>spring-boot-mirco-service-api</artifactId>
             <version>1.2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
