--- a/spring-boot/spring-boot-mirco-service/pom.xml
+++ b/spring-boot/spring-boot-mirco-service/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-boot-mirco-service-rabbitmq-configuration</module>
         <module>spring-boot-mirco-service-rabbitmq-provider</module>
         <module>spring-boot-mirco-service-rabbitmq-consumer</module>
+        <module>spring-boot-mirco-service-rabbitmq-api</module>
     </modules>
 
     <dependencies>
