--- a/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/pom.xml
+++ b/spring-boot/spring-boot-mirco-service/spring-boot-mirco-service-server/pom.xml
@@ -23,6 +23,12 @@
             <version>1.2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.sephiroth</groupId>
+            <artifactId>spring-boot-mirco-service-rabbitmq-api</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
